force-app/main/default/objects/Document_Handler__c/Document_Handler__c.object-meta.xml
<CustomObject>
    <label>Document Handler</label>
    <nameField>
        <label>Document Handler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Handler</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>