force-app/main/default/objects/Document_Handler__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Document Associated with which Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Document Handler (Account)</relationshipLabel>
    <relationshipName>Document_Handler</relationshipName>
    <type>Lookup</type>
</CustomField>