force-app/main/default/objects/Document_Handler__c/fields/Box_Barcode__c.field-meta.xml
<CustomField>
    <fullName>Box_Barcode__c</fullName>
    <label>Box Barcode</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>