force-app/main/default/objects/Document_Handler__c/fields/Current_Dispatch_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Current_Dispatch_Serial_No__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Dispatch Serial No</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>