force-app/main/default/objects/Document_Handler__c/fields/Current_Task_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Task_ID__c</fullName>
    <label>Current Task ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>