force-app/main/default/objects/Document_Handler__c/fields/Date_of_storage__c.field-meta.xml
<CustomField>
    <fullName>Date_of_storage__c</fullName>
    <label>Date of storage</label>
    <type>Date</type>
</CustomField>