force-app/main/default/objects/Document_Handler__c/fields/Digitally_Verified__c.field-meta.xml
<CustomField>
    <fullName>Digitally_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digitally Verified</label>
    <type>Checkbox</type>
</CustomField>