force-app/main/default/objects/Document_Handler__c/fields/DMS_Document_Path__c.field-meta.xml
<CustomField>
    <fullName>DMS_Document_Path__c</fullName>
    <label>DMS Document Path</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>