force-app/main/default/objects/Document_Handler__c/fields/DMS_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_ID__c</fullName>
    <description>Will store the record ID for the file storage system</description>
    <label>Delete DMS ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>