force-app/main/default/objects/Document_Handler__c/fields/DMS_System__c.field-meta.xml
<CustomField>
    <fullName>DMS_System__c</fullName>
    <label>DMS System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>