force-app/main/default/objects/Document_Handler__c/fields/Document_Categories__c.field-meta.xml
<CustomField>
    <fullName>Document_Categories__c</fullName>
    <label>Delete Document Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KYC</fullName>
            </value>
            <value>
                <fullName>Personal Details</fullName>
            </value>
            <value>
                <fullName>PAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>