force-app/main/default/objects/Document_Handler__c/fields/Document_Created__c.field-meta.xml
<CustomField>
    <fullName>Document_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Created</label>
    <type>Checkbox</type>
</CustomField>