force-app/main/default/objects/Document_Handler__c/fields/Document_Id_Value__c.field-meta.xml
<CustomField>
    <fullName>Document_Id_Value__c</fullName>
    <label>Document Id Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>