force-app/main/default/objects/Document_Handler__c/fields/Document_ID_Value_Masked__c.field-meta.xml
<CustomField>
    <fullName>Document_ID_Value_Masked__c</fullName>
    <label>Document ID Value Masked</label>
    <length>40</length>
    <type>Text</type>
</CustomField>