force-app/main/default/objects/Document_Handler__c/fields/Document_MD_Categories__c.field-meta.xml
<CustomField>
    <fullName>Document_MD_Categories__c</fullName>
    <formula>Document_Metadata__r.Document_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document MD Categories</label>
    <type>Text</type>
</CustomField>