force-app/main/default/objects/Document_Handler__c/fields/Document_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Document_Metadata__c</fullName>
    <label>Document Metadata</label>
    <referenceTo>Document_Metadata__c</referenceTo>
    <relationshipLabel>Document Handler</relationshipLabel>
    <relationshipName>Document_Handler</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>