force-app/main/default/objects/Document_Handler__c/fields/Document_Sharing_Task_Ids__c.field-meta.xml
<CustomField>
    <fullName>Document_Sharing_Task_Ids__c</fullName>
    <label>Document Sharing Task Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>