force-app/main/default/objects/Document_Handler__c/fields/Document_SLA__c.field-meta.xml
<CustomField>
    <fullName>Document_SLA__c</fullName>
    <label>Document SLA</label>
    <type>Date</type>
</CustomField>