force-app/main/default/objects/Document_Handler__c/fields/Document_Storage_Document_Handler__c.field-meta.xml
<CustomField>
    <fullName>Document_Storage_Document_Handler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The document name in which the current document has been stored</description>
    <label>Document Storage Document Handler</label>
    <referenceTo>Document_Handler__c</referenceTo>
    <relationshipLabel>Document Handler</relationshipLabel>
    <relationshipName>Document_Storage_Document_Handler</relationshipName>
    <type>Lookup</type>
</CustomField>