force-app/main/default/objects/Document_Handler__c/fields/Exempted__c.field-meta.xml
<CustomField>
    <fullName>Exempted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exempted</label>
    <type>Checkbox</type>
</CustomField>