force-app/main/default/objects/Document_Handler__c/fields/Extended_SObject_RecordId__c.field-meta.xml
<CustomField>
    <fullName>Extended_SObject_RecordId__c</fullName>
    <label>Extended SObject RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>