force-app/main/default/objects/Document_Handler__c/fields/File_Barcode__c.field-meta.xml
<CustomField>
    <fullName>File_Barcode__c</fullName>
    <label>File Barcode</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>