force-app/main/default/objects/Document_Handler__c/fields/File_Path__c.field-meta.xml
<CustomField>
    <fullName>File_Path__c</fullName>
    <formula>Opportunity__r.Name + &apos;/&apos; + Document_Metadata__r.Document_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Path</label>
    <type>Text</type>
</CustomField>