force-app/main/default/objects/Document_Handler__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>Document Handler</relationshipLabel>
    <relationshipName>Document_Handler</relationshipName>
    <type>Lookup</type>
</CustomField>