force-app/main/default/objects/Document_Handler__c/fields/Is_Alternate_Document_Uploded__c.field-meta.xml
<CustomField>
    <fullName>Is_Alternate_Document_Uploded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Alternate Document Uploded</label>
    <type>Checkbox</type>
</CustomField>