force-app/main/default/objects/Document_Handler__c/fields/MODT_Details__c.field-meta.xml
<CustomField>
    <fullName>MODT_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MODT Details</label>
    <referenceTo>MODT_Details__c</referenceTo>
    <relationshipLabel>Document Handler</relationshipLabel>
    <relationshipName>Document_Handler</relationshipName>
    <type>Lookup</type>
</CustomField>