force-app/main/default/objects/Document_Handler__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Document Handler</relationshipLabel>
    <relationshipName>Document_Handler</relationshipName>
    <type>Lookup</type>
</CustomField>