force-app/main/default/objects/Document_Handler__c/fields/Payable__c.field-meta.xml
<CustomField>
    <fullName>Payable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payable</label>
    <referenceTo>Paybale__c</referenceTo>
    <relationshipLabel>Document Handler</relationshipLabel>
    <relationshipName>Document_Handler</relationshipName>
    <type>Lookup</type>
</CustomField>