force-app/main/default/objects/Document_Handler__c/fields/Physical_Document_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Physical_Document_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physical Document Mandatory</label>
    <type>Checkbox</type>
</CustomField>