force-app/main/default/objects/Document_Handler__c/fields/Proceed_Task_Ids__c.field-meta.xml
<CustomField>
    <fullName>Proceed_Task_Ids__c</fullName>
    <label>Proceed Task Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>