force-app/main/default/objects/Document_Handler__c/fields/Process_Attribute_Dcoument_Detail__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute_Dcoument_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Attribute Dcoument Detail</label>
    <referenceTo>Process_Attribute_Dcoument_Detail__c</referenceTo>
    <relationshipLabel>Document Handler</relationshipLabel>
    <relationshipName>Document_Handler</relationshipName>
    <type>Lookup</type>
</CustomField>