force-app/main/default/objects/Document_Handler__c/fields/Process_Task_Owner_Assignment_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Process_Task_Owner_Assignment_Matrix__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Task Owner Assignment Matrix</label>
    <referenceTo>Process_Task_Owner_Assignment_Matrix__c</referenceTo>
    <relationshipLabel>Document Handler</relationshipLabel>
    <relationshipName>Document_Handler</relationshipName>
    <type>Lookup</type>
</CustomField>