force-app/main/default/objects/Document_Handler__c/fields/Reviewer_Type__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Type__c</fullName>
    <label>Delete Reviewer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>