force-app/main/default/objects/Document_Handler__c/fields/Shipping_Partner__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Document Handler (Shipping Partner)</relationshipLabel>
    <relationshipName>DH_Shipping_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>