force-app/main/default/objects/Document_Handler__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>To Be Dispatched</fullName>
            </value>
            <value>
                <fullName>Not Received</fullName>
            </value>
            <value>
                <fullName>Submited For Review</fullName>
            </value>
            <value>
                <fullName>Deviation Approved</fullName>
            </value>
            <value>
                <fullName>Deviation Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted for Deviation Approval</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Re-Assigned</fullName>
            </value>
            <value>
                <fullName>Handed Over Successfully</fullName>
            </value>
            <value>
                <fullName>To Be Handed Over</fullName>
            </value>
            <value>
                <fullName>Submit For Review</fullName>
            </value>
            <value>
                <fullName>Change of Payment Mode</fullName>
            </value>
            <value>
                <fullName>Wrong Check Details</fullName>
            </value>
            <value>
                <fullName>Exempted</fullName>
            </value>
            <value>
                <fullName>Physical Document Pending</fullName>
            </value>
            <value>
                <fullName>Document Storage</fullName>
            </value>
            <value>
                <fullName>Physically Stored</fullName>
            </value>
            <value>
                <fullName>Memo Executed</fullName>
            </value>
            <value>
                <fullName>Submitted For Execution</fullName>
            </value>
            <value>
                <fullName>Alternate Document Added</fullName>
            </value>
            <value>
                <fullName>Request Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>