force-app/main/default/objects/Document_Handler__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>RTGS</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
            <value>
                <fullName>Sanction Amount</fullName>
            </value>
            <value>
                <fullName>Waiver</fullName>
            </value>
            <value>
                <fullName>Wrong Account Number</fullName>
            </value>
            <value>
                <fullName>Wrong Amount</fullName>
            </value>
            <value>
                <fullName>Wrong</fullName>
            </value>
            <value>
                <fullName>Stale Cheque – to be cancelled and reissue</fullName>
            </value>
            <value>
                <fullName>Customer might not be interested in taking the Loan</fullName>
            </value>
            <value>
                <fullName>BT financier will accept payment only from the Borrower not from the financier</fullName>
            </value>
            <value>
                <fullName>Beneficiary name mismatch/wrong</fullName>
            </value>
            <value>
                <fullName>BT financier will not accept the payment mode Cheque</fullName>
            </value>
            <value>
                <fullName>Cheque amount does not match as per the Foreclosure letter (FCL) / Statement of Account (SOA)</fullName>
            </value>
            <value>
                <fullName>Cheque to be issued as a single payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>