force-app/main/default/objects/Document_Handler__c/fields/To_Be_Received_By__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Received_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Be Received By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Document_Handler</relationshipName>
    <type>Lookup</type>
</CustomField>