force-app/main/default/objects/Document_Handler__c/fields/Transfer_By__c.field-meta.xml
<CustomField>
    <fullName>Transfer_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Document Handler (Transfer By)</relationshipLabel>
    <relationshipName>DH_Transfer_By</relationshipName>
    <type>Lookup</type>
</CustomField>