force-app/main/default/objects/Document_Handler__c/fields/Transfer_To__c.field-meta.xml
<CustomField>
    <fullName>Transfer_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Document Handler</relationshipLabel>
    <relationshipName>DH_Transfer_To</relationshipName>
    <type>Lookup</type>
</CustomField>