force-app/main/default/objects/Document_Handler__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Current_Task_ID__c</columns>
    <columns>Task_Id__c</columns>
    <columns>Status__c</columns>
    <columns>Transfer_To__c</columns>
    <columns>Transfer_By__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Document_Sharing_Task_Ids__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
        <value>0001C15340424026MLA113871</value>
    </filters>
    <label>All</label>
</ListView>